--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,17 @@
 __pycache__
 .mypy_cache/
 models/
-checkpoint
+checkpoint*
 samples
 dist-newstyle
 bin
+
+*.log
+*.txt
+
+.vscode
+scala-codes/
+scala-codes.npz
+
+
+venv/
